--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,15 +94,19 @@
   }
 
   .animate-scroll-left {
-    animation: scroll-left 30s linear infinite;
+    animation: scroll-left 25s linear infinite;
     will-change: transform;
     transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
   }
 
   .animate-scroll-right {
-    animation: scroll-right 30s linear infinite;
+    animation: scroll-right 25s linear infinite;
     will-change: transform;
     transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
   }
 
   .hover\:pause-animation:hover {
